--- a/GoTeamSeas/src/appMobile.css
+++ b/GoTeamSeas/src/appMobile.css
@@ -1,15 +1,25 @@
 @media only screen and (max-width: 600px) { /* Mobile Devices */ 
-  #showOnPC{
+  .showOnPC{
     display: none;
   }
 
-  #showOnMobile{
+.showOnMobile{
     display: inline;
+  }
+
+  nav li{
+    display: inline;
+  }
+
+  #nav ul{
+    display: flex;
+    align-items: center;
   }
 
   nav li a{
     margin-top: auto;
     font-size: small;
+    padding: 4px 4x;
   }
 
   .hideOnMobile{
